karnc/tests/fixtures/positive/192_kv_and_secrets/src/cache/secured.karn
context cache.secured

consumes karn { Secrets }
consumes karn.cloudflare { Kv }

service vault {
  on call(key: String) -> Effect[Option[String]] given Kv, Secrets {
    let fallback <- Secrets.get("CACHE_FALLBACK")
    let hit <- Kv.get(key)
    match hit {
      Some(v) => Some(v),
      None => fallback,
    }
  }
}
