karnc/tests/fixtures/negative/139_service_in_adapter/src/tokens.karn
adapter tokens {
  binding "./tokens.binding.ts"

  capability Jwt {
    fn sign(secret: String) -> Effect[String]
  }

  provides Jwt = JoseJwt

  service login {
    on call(x: Int) -> Effect[Int] {
      x
    }
  }
}
